2013-06-20  Paul Eggert  <eggert@cs.ucla.edu>

	* floatfns.c (Flog10): Move to Lisp (marked obsolete there).

2013-06-20  Rüdiger Sonderfeld <ruediger@c-plusplus.de>

	* floatfns.c (Flog) [HAVE_LOG2]: Use log2 if available and if the
	base is 2; this is more accurate.

2013-06-19  Juanma Barranquero  <lekktu@gmail.com>

	* sound.c (string_default): Move to !WINDOWSNT section.
	(Fplay_sound_internal) [WINDOWSNT]: Remove i_result to avoid warning.

2013-06-19  Paul Eggert  <eggert@cs.ucla.edu>

	* sound.c: Integer cleanups.
	Remove unnecessary forward decls.
	(struct sound_device): The 'file' member is now a Lisp_Object, not
	a char *, so that we needn't invoke alloca on a huge size.
	(Fplay_sound_internal): Adjust to this.
	(string_default): New function.
	(vox_open, vox_init, alsa_open, alsa_configure, alsa_init):
	Use it to adjust to the struct sound_device change.
	(parse_sound, wav_init, au_init, alsa_init): Use bool for booleans.
	(be2hs) [0]: Remove.

	* syntax.c (skip_chars): Don't use uninitialized storage
	when searching a multibyte buffer for characters that are not in a
	unibyte string that contains non-ASCII characters.

2013-06-18  Jan Djärv  <jan.h.d@swipnet.se>

	* process.c: Include xgselect.h if HAVE_GLIB.  Include glib.h
	if HAVE_GLIB && ! WINDOWSNT (Bug#14654).

2013-06-18  Paul Eggert  <eggert@cs.ucla.edu>

	* conf_post.h: Add comments for INLINE, EXTERN_INLINE, etc.

2013-06-18  Kenichi Handa  <handa@gnu.org>

	* font.c (Ffont_spec): Signal an error for an invalid font name
	(Bug#14648).

2013-06-18  Paul Eggert  <eggert@cs.ucla.edu>

	Porting fixes for merged specpdl and backtrace stacks (Bug#14643).
	In particular this ports to 32-bit sparc Sun cc.
	* eval.c (init_eval_once, grow_specpdl): Allocate a specbinding
	array with a dummy element at specpdl[-1], so that its address can
	be taken portably.
	(unbind_to): Do not copy the binding; not needed, now that we
	copy old_value in the one place where the copy is needed.